# str-bench

./: .cspell.json  BENCHMARK.md  Cargo.toml  README.md
benches/: clone.rs  iterate.rs  push.rs  replace.rs  to_string.rs
src/: main.rs
